manifest/base/demon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demon
  labels:
    app: demon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demon
  template:
    metadata:
      labels:
        app: demon
    spec:
      containers:
      - name: demon
        image: intermine/demon:latest
        ports:
        - containerPort: 9991
---
apiVersion: v1
kind: Service
metadata:
  name: demon
  labels:
    app: demon
spec:
  selector:
    app: demon
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9991
      targetPort: 9991
