manifest/base/minio.yaml
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-artifacts
  labels:
    app: minio
    chart: minio-8.0.10
    release: argo-artifacts
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: argo-artifacts
---
# Source: minio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-artifacts
  labels:
    app: minio
    chart: minio-8.0.10
    release: argo-artifacts
    heritage: Helm
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: minio
      release: argo-artifacts
  template:
    metadata:
      name: argo-artifacts
      labels:
        app: minio
        release: argo-artifacts
      annotations:
        checksum/secrets: 9a6920e02dd8f4c782b7b463ddb76c539ebb0e812fb3fff8daf410449e028f3d
        checksum/config: 9328992fa2594f29dfe97f028ef469606b6c8c772ad1232ffc3ef36385feaac3
    spec:
      serviceAccountName: "argo-artifacts"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: minio
          image: "minio/minio:RELEASE.2021-02-14T04-01-33Z"
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio -S /etc/minio/certs/ server /export"
          volumeMounts:
            - name: export
              mountPath: /export            
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              memory: 4Gi      
      volumes:
        - name: export
          persistentVolumeClaim:
            claimName: argo-artifacts
        - name: minio-user
          secret:
            secretName: argo-artifacts
